--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "DiscordBot": {
     "clientId": "1018968953311203458",
     "guildId": "1399124114391695370",
-    "token": "MTM5OTE0NDcyNjI5MjIwNTU3OA.Gzd2uZ.DFAftHLh6bUuQdGRZxJsz3mcylqVW6e2idbOD4"
+    "token": "MTM5OTE0NDcyNjI5MjIwNTU3OA.G-FqvL.UXH-uS9fL7NUJ3Ozy5tWTarJr7d4IMUHjGldIQ"
   },
   "Commands": {
     "forum": "https://votreforum.fr/",
